--- a/login.css
+++ b/login.css
@@ -6,9 +6,28 @@ html {
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
   display: flex;
   justify-content: center;
+
+  width: 390px;
+  height: 100vh; /* take full screen height */
+  background: #ffffff;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mascot {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 80px;
+}
+.image {
+  width: 250px;
 }
 
 /* Container for the main content */
